--- a/Services/Content/Site.css
+++ b/Services/Content/Site.css
@@ -1,24 +1,52 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿.navbar {
+    background-color: darkmagenta !important;
+}
+.mySlides{
+    width: 700px;
+    height:500px;
+    margin-left:220px;
+    margin-top:60px;
+    display:block;
+}
+body {
+    background-color: transparent !important;
+}
+h4{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 40px;
+    text-align:center;
+
+}
+h1{
+    text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 60px;
+    
+}
+p.message1{
+    text-align: center;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size:20px;
 }
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+div.info{
+    padding: 10px, 20px;
+    margin-top:50px;
+}
+.btn{
+    display:table;
+    text-align:center;
+    text-decoration:none;
+    letter-spacing: .02em;
+    font-weight: 700;
+    color:#ecf0f1;
+    background-color: darkmagenta;
+    border-radius:.24em;
+    margin-bottom:1em;
+    margin-left:500px;
+}
+.btn-medium{
+    font-size:1em;
+    padding: 1em 2em;
 }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
-.dl-horizontal dt {
-    white-space: normal;
-}
-
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
-}
