--- a/Services/Views/Account/Login.cshtml
+++ b/Services/Views/Account/Login.cshtml
@@ -5,7 +5,8 @@
 }
 
 
-<h2>Login</h2>
+<h2>Log In</h2>
+
 
 @using (Html.BeginForm())
 {
@@ -15,6 +16,13 @@
         <h4>Log In</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @if (ViewBag.Message != null)
+        {
+            <div class="form-group">
+                <div class="col-md-10">@ViewBag.Message</div>
+            </div>
+
+        }
 
 
 
