--- a/Services/Content/bootstrap.css
+++ b/Services/Content/bootstrap.css
@@ -438,7 +438,9 @@ cite {
 }
 
 .text-danger {
-  color: #b94a48;
+    color: #b94a48;
+    text-align: center;
+    margin-left: 450px;
 }
 
 .text-success {
@@ -4522,7 +4524,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-inverse .navbar-nav > li > a {
-  color: #999999;
+  color: black;
 }
 
 .navbar-inverse .navbar-nav > li > a:hover,
